Adding Files for gh-pages

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,23 @@
+@font-face {
+  font-family: "OnePieceFont";
+  src: local("OnePieceFont"),
+    url("./fonts/one-piece-font.ttf") format("truetype");
+  font-weight: normal;
+}
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height: 100vh;
+  background: #2193b0;
+  background: -webkit-linear-gradient(to right, #31ccf3, #2193b0);
+  background: linear-gradient(to right, #31ccf3 0%, #2193b0 100%);
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
